--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <tr onmouseout="mipnerf_stop()" onmouseover="mipnerf_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/ICCV_2021_Few_Shot.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="data/ICCV_2021_Few_Shot.jpg" class="hoverZoomLink"></a>
+                <a href="data/ICCV2021FewShot.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/ICCV2021FewShot.jpg" class="hoverZoomLink"></a>
               </div>
               
             </td>
@@ -75,7 +75,7 @@
           <tr onmouseout="mipnerf_stop()" onmouseover="mipnerf_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/acm_2021_fashion.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="data/acm_2021_fashion.jpg" class="hoverZoomLink"></a>
+                <a href="data/acm2021fashion.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/acm2021fashion.jpg" class="hoverZoomLink"></a>
               </div>
               
             </td>
@@ -101,7 +101,7 @@
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/CVPR_2020_Webly.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="data/CVPR_2020_Webly.jpg" class="hoverZoomLink"></a>
+                <a href="data/CVPR2020Webly.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/CVPR2020Webly.jpg" class="hoverZoomLink"></a>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -122,7 +122,7 @@
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/ACM_2019_m2e.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="data/ACM_2019_m2e.jpg" class="hoverZoomLink"></a>
+                <a href="data/ACM2019m2e.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/ACM2019m2e.jpg" class="hoverZoomLink"></a>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -143,7 +143,7 @@
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/IVC_parsing.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="data/IVC_parsing.jpg" class="hoverZoomLink"></a>
+                <a href="data/IVCparsing.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/IVCparsing.jpg" class="hoverZoomLink"></a>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
