--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <tr onmouseout="mipnerf_stop()" onmouseover="mipnerf_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/ICCV2021FewShot.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/ICCV2021FewShot.jpg" class="hoverZoomLink"></a>
+                <img src='data/ICCV2021FewShot.jpg' width="160">
               </div>
               
             </td>
