--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/seal_icon.png">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
               <p style="text-align:center">
                 <name>Zhonghua Wu (吴仲华)</name>
               </p>
-              <p>Zhonghua Wu is currently a third year PhD student at <a href="https://www.ntu.edu.sg/">Nanyang Technological Unversity</a>, supervised by <a href="https://guosheng.github.io/">Prof. Lin Guosheng</a> and <a href="https://jianfei-cai.github.io/">Prof. Cai Jianfei</a>. Previously, he recieved a bachlor degree at College of Electronic Engineering (EE) at <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC) in 2017. 
+              <p>Zhonghua Wu is currently a third year PhD student at School of Computer Science and Engineering, <a href="https://www.ntu.edu.sg/">Nanyang Technological Unversity</a>, supervised by <a href="https://guosheng.github.io/">Prof. Lin Guosheng</a> and <a href="https://jianfei-cai.github.io/">Prof. Cai Jianfei</a>. Previously, he recieved a bachlor degree from College of Electronic Engineering (EE) at <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC) in 2017. 
               </p>
               <p>His research interests are broadly in computer vision, including image generation, image detection and segmentation, point cloud segmentation, etc.
               </p>
@@ -61,7 +60,7 @@
               <strong>Zhonghua Wu</strong>,
               Xiangxi Shi,
               Guosheng Lin,
-              Jianfei Cai,
+              Jianfei Cai
               <br>
 							<em>ICCV</em>, 2021 &nbsp <font color="red"></font>
               <br>
@@ -87,7 +86,7 @@
               <strong>Zhonghua Wu</strong>*,
               Taizhe Tan,
               Guosheng Lin,
-              Qingyao Wu,
+              Qingyao Wu
               <br>
               (* indicates equal contribution)
               <br>
@@ -110,7 +109,7 @@
               <strong>Zhonghua Wu</strong>,
               Qingyi Tao,
               Guosheng Lin,
-              Jianfei Cai,
+              Jianfei Cai
               <br>
 							<em>CVPR</em>, 2020 &nbsp
               <br>
@@ -129,9 +128,9 @@
               <papertitle>M2E-Try On Net: Fashion from Model to Everyone</papertitle>
               <br>
               <strong>Zhonghua Wu</strong>,
-              Qingyi Tao,
               Guosheng Lin,
-              Jianfei Cai,
+              Qingyi Tao,
+              Jianfei Cai
               <br>
               <em>ACM MM</em>, 2019 &nbsp
               <br>
