--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <tr onmouseout="mipnerf_stop()" onmouseover="mipnerf_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <img src='data/ICCV2021FewShot.jpg' width="160">
+                <a href="data/ICCV2021FewShot.JPG"><img style="width:100%;max-width:100%" alt="image" src="data/ICCV2021FewShot.JPG" class="hoverZoomLink"></a>
               </div>
               
             </td>
@@ -74,7 +74,7 @@
           <tr onmouseout="mipnerf_stop()" onmouseover="mipnerf_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/acm2021fashion.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/acm2021fashion.jpg" class="hoverZoomLink"></a>
+                <a href="data/acm2021fashion.JPG"><img style="width:100%;max-width:100%" alt="image" src="data/acm2021fashion.JPG" class="hoverZoomLink"></a>
               </div>
               
             </td>
@@ -100,7 +100,7 @@
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/CVPR2020Webly.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/CVPR2020Webly.jpg" class="hoverZoomLink"></a>
+                <a href="data/CVPR2020Webly.JPG"><img style="width:100%;max-width:100%" alt="image" src="data/CVPR2020Webly.JPG" class="hoverZoomLink"></a>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -121,7 +121,7 @@
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/ACM2019m2e.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/ACM2019m2e.jpg" class="hoverZoomLink"></a>
+                <a href="data/ACM2019m2e.JPG"><img style="width:100%;max-width:100%" alt="image" src="data/ACM2019m2e.JPG" class="hoverZoomLink"></a>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -142,7 +142,7 @@
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="three">
-                <a href="data/IVCparsing.jpg"><img style="width:100%;max-width:100%" alt="image" src="data/IVCparsing.jpg" class="hoverZoomLink"></a>
+                <a href="data/IVCparsing.JPG"><img style="width:100%;max-width:100%" alt="image" src="data/IVCparsing.JPG" class="hoverZoomLink"></a>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
