--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="data/CV_Wu_Zhonghua.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.sg/citations?user=wMDgLCYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/wu-zhonghua">Github</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/zhonghua-wu-94b2b6190">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/zhonghua-wu-94b2b6190">Linkedin</a>
                  
               </p>
             </td>
@@ -92,10 +92,31 @@
               <br>
               <em>ACM MM</em>, 2021 &nbsp <font color="red"></font>
               <br>
-              <!-- <a href="https://arxiv.org/abs/2108.02958">arXiv</a> -->
+              <a href="https://arxiv.org/abs/2108.07502">arXiv</a>
               <p></p>
             </td>
           </tr>
+
+          <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="three">
+                <a href="data/food.JPG"><img style="width:100%;max-width:100%" alt="image" src="data/food.JPG" class="hoverZoomLink"></a>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>Portable Food‐Freshness Prediction Platform Based on Colorimetric Barcode Combinatorics and Deep Convolutional Neural Networks</papertitle>
+              <br>
+              Lingling Guo, Ting Wang, <strong>Zhonghua Wu</strong>, Jianwu Wang, Ming Wang, Zequn Cui, Shaobo Ji, Jianfei Cai, Chuanlai Xu, Xiaodong Chen
+              <br>
+              <em>Advanced Materials</em> &nbsp
+              <br>
+              <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/adma.202004805">Wiley Online Library</a>
+              <p></p>
+            </td>
+          </tr>
+
+
+
 
           <tr onmouseout="nerfbake_stop()" onmouseover="nerfbake_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
