--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <br>
               <a href="https://arxiv.org/abs/2108.02958">arXiv</a>
               /
-              <a href="https://github.com/wu-zhonghua/MM-Netcode">code</a>
+              <a href="https://github.com/wu-zhonghua/MM-Net">code</a>
               
               <p></p>
             </td>
