--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <br>
                - CVPR, ICCV, CVPR, AAAI, ACM MM, etc.
                <br>
-               - T-PAMI, IJCV, T-MM, TVCJ, etc.
+               - T-PAMI, IJCV, T-MM, T-NNLS, TVCJ, etc.
               
               <p></p>
             </td>
