--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
-                  <img src="images/publications/CVPR2020Webly.jpg">
+                  <img src="images/publications/CVPR2020Webly.JPG">
                 </figure>
               </div>
               <div class="column">
