--- a/index.html
+++ b/index.html
@@ -571,9 +571,9 @@
           <span class="fa-regular fa-envelope fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 6px"></span>
         </a>-->
       
-      <div class="footer_social" style= "display:inline; float:right;  font-size: 0.5em;">
+      <!-- <div class="footer_social" style= "display:inline; float:right;  font-size: 0.5em;">
           © Thanks Zhexin Liang for website support
-      </div>
+      </div> -->
     </footer>
   </section>
 
