--- a/index.html
+++ b/index.html
@@ -200,6 +200,26 @@
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
+                  <img src="images/publications/harmon.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Harmon: Harmonizing Visual Representations for Unified Multimodal Understanding and Generation</b><br>
+                    Size Wu, Wenwei Zhang, Lumin Xu, Sheng Jin, <b>Zhonghua Wu</b>, Qingyi Tao, Wentao Liu, Wei Li, Chen Change Loy<br>
+                    <i>arXiv preprint, 2025</i><br>
+                    <a href="https://arxiv.org/abs/2503.21979" target="_blank">[arXiv]</a>
+                    <a href="https://github.com/wusize/Harmon" target="_blank">[GitHub]</a>
+                    <a href="https://wusize.github.io/projects/Harmon/" target="_blank">[Project Page]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
+
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
                   <img src="images/publications/MOVA.png">
                 </figure>
               </div>
@@ -566,9 +586,6 @@
         </a>
         <a href="https://www.linkedin.com/in/haoying-li-388863265/" target="_blank">
           <span class="fab fa-linkedin fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 6px"></span>
-        </a>
-        <a href="mailto:lhaoying13@gmail.com" target="_blank">
-          <span class="fa-regular fa-envelope fa-2x" style="display:inline; text-decoration: none; color: #4a4a4a; margin-left: 6px"></span>
         </a>-->
       
       <!-- <div class="footer_social" style= "display:inline; float:right;  font-size: 0.5em;">
