--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               degree from College of Electronic Engineering (EE) at <a href="https://www.uestc.edu.cn/">University
                 of Electronic Science and Technology of China</a> (UESTC) in 2017.
             </p>
-            <p>His research interests are broadly in computer vision, ncluding AIGC, image restoration, image detection, segmentation, point cloud segmentation, etc.
+            <p>His research interests are broadly in computer vision, with a focus on multimodal large language models (MLLM), unified understanding and generation models, AI-generated content (AIGC), image restoration, visual understanding etc.
             </p>
             
             <!--Experience-->
