--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 Guosheng</a> and <a href="https://jianfei-cai.github.io/">Prof. Cai Jianfei</a>. Previously, he
               recieved a bachlor
               degree from College of Electronic Engineering (EE) at <a href="https://www.uestc.edu.cn/">University
-                of Electronic Science and Technology of China</a> (UESTC) in 2017.
+                of Electronic Science and Technology of China</a> (UESTC).
             </p>
             <p>His research interests are broadly in computer vision, with a focus on multimodal large language models (MLLM), unified understanding and generation models, AI-generated content (AIGC), image restoration, visual understanding etc.
             </p>
