--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             <h2 id="intro">About Me</h2>
             <p> Zhonghua Wu is currently a Researcher at SenseTime International. Prior to that, he completed his PhD
               at the School of Computer Science and Engineering, <a href="https://www.ntu.edu.sg/">Nanyang
-                Technological Unversity</a>, supervised by <a href="https://guosheng.github.io/">Prof. Lin
-                Guosheng</a> and <a href="https://jianfei-cai.github.io/">Prof. Cai Jianfei</a>. Previously, he
+                Technological Unversity</a>, supervised by <a href="https://jianfei-cai.github.io/">Prof. Cai Jianfei</a> and <a href="https://guosheng.github.io/">Prof. Lin
+                Guosheng</a>. Previously, he
               recieved a bachlor
               degree from College of Electronic Engineering (EE) at <a href="https://www.uestc.edu.cn/">University
                 of Electronic Science and Technology of China</a> (UESTC).
