--- a/index.html
+++ b/index.html
@@ -197,6 +197,26 @@
 
             <!--List of publications-->  
             <!-- New Publications -->
+
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/publications/nvcg.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Next Visual Granularity Generation</b><br>
+                    Yikai Wang, Zhouxia Wang, <b>Zhonghua Wu</b>, Qingyi Tao, Kang Liao, Chen Change Loy<br>
+                    <i>Preprint, 2025</i><br>
+                    <a href="https://arxiv.org/abs/2508.12811" target="_blank">[arXiv]</a>
+                    <a href="https://github.com/Yikai-Wang/nvg" target="_blank">[Code]</a>
+                    <a href="https://yikai-wang.github.io/nvg/" target="_blank">[Project Page]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
             
 
             <article class="columns">
@@ -317,6 +337,8 @@
                 </div>
               </div>
             </article>
+
+
 
             <article class="columns">
               <div class="column is-3">
