--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             </p>
             <p>His research interests are broadly in computer vision, with a focus on multimodal large language models (MLLM), unified understanding and generation models, AI-generated content (AIGC), image restoration, visual understanding etc.
             </p>
+            <p>He serves as Area Chair for CVPR and ICLR.</p>
             
             <!--Experience-->
             <h2 id="experiences" style="margin-bottom: 25px;">Experiences</h2>
@@ -234,6 +235,24 @@
                     <i>arXiv preprint, 2025</i><br>
                     <a href="https://arxiv.org/abs/2505.23661" target="_blank">[arXiv]</a>
                     <a href="https://github.com/wusize/OpenUni" target="_blank">[GitHub]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
+
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
+                  <img src="images/publications/WS-3D-SAM.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Integrating SAM Supervision for 3D Weakly Supervised Point Cloud Segmentation</b><br>
+                    Lechun You, <b>Zhonghua Wu</b>, Weide Liu, Xulei Yang, Jun Cheng, Wei Zhou, Bharadwaj Veeravalli, Guosheng Lin<br>
+                    <i>arXiv preprint, 2025</i><br>
+                    <a href="https://arxiv.org/abs/2508.19909" target="_blank">[arXiv]</a>
                   </p>
                 </div>
               </div>
