--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <!--About Me-->
             <h2 id="intro">About Me</h2>
-            <p> Zhonghua Wu is currently a Researcher at SenseTime Research Singapore. Prior to that, he completed his PhD
+            <p> Zhonghua Wu is currently a Senior Researcher at SenseTime Research Singapore. Prior to that, he completed his PhD
               at the School of Computer Science and Engineering, <a href="https://www.ntu.edu.sg/">Nanyang
                 Technological Unversity</a>, supervised by <a href="https://jianfei-cai.github.io/">Prof. Cai Jianfei</a> and <a href="https://guosheng.github.io/">Prof. Lin
                 Guosheng</a>. Previously, he
@@ -145,7 +145,7 @@
               <div class="column">
                 <div class="content">
                   <p>
-                    <b> Algorithm Researcher </b> | SenseTime International<br>
+                    <b> Senior Algorithm Researcher </b> | SenseTime International<br>
                     Nov 2022 - Now
                 </div>
               </div>
@@ -202,6 +202,29 @@
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
+                  <img src="images/publications/puffin.png">
+                </figure>
+              </div>
+              <div class="column">
+                <div class="content">
+                  <p>
+                    <b>Thinking with Camera: A Unified Multimodal Model for Camera-Centric Understanding and Generation</b><br>
+                    Kang Liao, Size Wu, <b>Zhonghua Wu</b>, Linyi Jin, Chao Wang, Yikai Wang, Fei Wang, Wei Li, Chen Change Loy<br>
+                    <i>International Conference on Learning Representations (ICLR 2026)</i><br>
+                    <a href="https://arxiv.org/abs/2510.08673" target="_blank">[arXiv]</a>
+                    <a href="https://kangliao929.github.io/projects/puffin/" target="_blank">[Project Page]</a>
+                    <a href="https://github.com/KangLiao929/Puffin" target="_blank">[Github]</a>
+                    <a href="https://huggingface.co/datasets/KangLiao/Puffin-4M" target="_blank">[Dataset]</a>
+                    <a href="https://huggingface.co/KangLiao/Puffin" target="_blank">[Model]</a>
+                    <a href="https://huggingface.co/spaces/KangLiao/Puffin" target="_blank">[Demo]</a>
+                  </p>
+                </div>
+              </div>
+            </article>
+
+            <article class="columns">
+              <div class="column is-3">
+                <figure class="image">
                   <img src="images/publications/nvcg.png">
                 </figure>
               </div>
@@ -210,10 +233,10 @@
                   <p>
                     <b>Next Visual Granularity Generation</b><br>
                     Yikai Wang, Zhouxia Wang, <b>Zhonghua Wu</b>, Qingyi Tao, Kang Liao, Chen Change Loy<br>
-                    <i>Preprint, 2025</i><br>
+                    <i>International Conference on Learning Representations (ICLR 2026)</i><br>
                     <a href="https://arxiv.org/abs/2508.12811" target="_blank">[arXiv]</a>
-                    <a href="https://github.com/Yikai-Wang/nvg" target="_blank">[Code]</a>
                     <a href="https://yikai-wang.github.io/nvg/" target="_blank">[Project Page]</a>
+                    <a href="https://github.com/Yikai-Wang/nvg" target="_blank">[Github]</a>
                   </p>
                 </div>
               </div>
